<!--
  ~ Copyright (c) 2017 Mindstix Inc.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.mindstix.automation</groupId>
  <artifactId>selenium-accelerator</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <properties>
     <env.browser>chrome</env.browser>
     <env.driverPath>drivers/linux/chromedriver_2_33</env.driverPath>
     <env.urlPrefix>www</env.urlPrefix>
     <env.targetDomain>.automationpractice.com</env.targetDomain>
     <env.mode>normal</env.mode>
     <env.hubIP>172.17.0.2:4444</env.hubIP>
     <env.threadCount>4</env.threadCount>
  </properties>
  
  <repositories>
    <repository>
      <id>jcenter</id>
      <url>https://jcenter.bintray.com/</url>
    </repository>
  </repositories>
  
  <dependencies>
  		<dependency>
  			<groupId>io.github.prashant-ramcharan</groupId>
  			<artifactId>courgette-jvm</artifactId>
  			<version>1.4.0</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>
		<dependency>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-compiler-plugin</artifactId>
  			<version>3.5</version>
  			<type>maven-plugin</type>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.4.0</version>
		</dependency>
		<dependency>
    		<groupId>io.github.bonigarcia</groupId>
    		<artifactId>webdrivermanager</artifactId>
    		<version>2.0.1</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>1.2.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>1.2.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-picocontainer</artifactId>
			<version>1.2.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
    		<groupId>org.slf4j</groupId>
    		<artifactId>slf4j-api</artifactId>
    		<version>1.7.13</version>
		</dependency>
		<dependency>
    		<groupId>org.slf4j</groupId>
    		<artifactId>slf4j-log4j12</artifactId>
    		<version>1.7.13</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-remote-driver</artifactId>
			<version>3.4.0</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-server</artifactId>
			<version>3.4.0</version>
		</dependency>
		<dependency>
	    	<groupId>com.googlecode.json-simple</groupId>
	    	<artifactId>json-simple</artifactId>
	    	<version>1.1.1</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-mapper-asl -->
		<dependency>
	    	<groupId>org.codehaus.jackson</groupId>
	    	<artifactId>jackson-mapper-asl</artifactId>
	    	<version>1.5.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.json/json -->
		<dependency>
	    	<groupId>org.json</groupId>
	    	<artifactId>json</artifactId>
	    	<version>20090211</version>
		</dependency>
		<!-- Snakeyaml Dependancies -->
		<dependency>
		    <groupId>org.yaml</groupId>
		    <artifactId>snakeyaml</artifactId>
		    <version>1.8</version>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.1</version>
		</dependency>
		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
			<version>2.3.27-incubating</version>
		</dependency>
	    
	</dependencies>
  <build>
   <resources>
        <resource>
            <directory>src/test/resources</directory>
            <filtering>true</filtering>
        </resource>
    </resources>
	<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
          		<artifactId>maven-compiler-plugin</artifactId>
          		<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.14.1</version>
                <configuration>
                	<systemPropertyVariables>
                		<env.hubIP>${env.hubIP}</env.hubIP>
                		<env.urlPrefix>${env.urlPrefix}</env.urlPrefix>
                		<env.mode>${env.mode}</env.mode>
        				<env.browser>${env.browser}</env.browser>
     					<env.driverPath>${env.driverPath}</env.driverPath>
     					<env.baseURL>https://${env.urlPrefix}${env.targetDomain}</env.baseURL>
        			</systemPropertyVariables>
        			<skip>false</skip>
          			<forkCount>${env.threadCount}</forkCount>
          			<reuseForks>true</reuseForks>
          			<argLine>-Duser.language=en</argLine>
          			<argLine>-Xmx1024m</argLine>
          			<argLine>-XX:MaxPermSize=256m</argLine>
          			<argLine>-Dfile.encoding=UTF-8</argLine>
          			<useFile>false</useFile>
        			<includes>
            			<include>**/*Runner.java</include>
        			</includes>
                </configuration>
           </plugin> 
		</plugins>
	</build>
 
</project>
